k8s/kind/01-db.yaml
# Postgres Service
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: guestbook
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
---
# Postgres Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: quay.io/fedora/postgresql-16:latest
        ports:
        - containerPort: 5432
---
# Redis Service
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: guestbook
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
---
# Redis Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: guestbook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: quay.io/kurs/redis:latest
        command: ["redis-server", "--requirepass", "$(REDIS_PASSWORD)"]
        ports:
        - containerPort: 6379
